--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,16 +1,129 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/homebackground"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <FrameLayout
+        android:id="@+id/main_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout 
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+        
+	      <RelativeLayout 
+	          android:layout_width="match_parent"
+	          android:layout_height="53dp"
+	          android:background="@drawable/topnav">
+	          
+	          <TextView 
+	              android:layout_width="match_parent"
+	              android:layout_height="match_parent"
+	              android:textColor="#d7d7d7"
+	              android:textSize="22sp" 
+	              android:gravity="center"
+	              android:text="部落平方"/>
+	          
+	          <Button 
+	              android:id="@+id/btn_drawer"
+	              android:layout_width="53dp"
+	              android:layout_height="match_parent"
+	              android:background="@drawable/listbutton"/>
+	
+	          <Button
+	              android:id="@+id/btn_main_search"
+	              android:layout_width="53dp"
+	              android:layout_height="match_parent"
+	              android:layout_alignParentRight="true"
+	              android:background="@drawable/btn_search" />
+	          
+	      </RelativeLayout>
+	        <FrameLayout
+                android:id="@+id/main_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+	          <LinearLayout 
+	              android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical">
+				<LinearLayout
+			        android:layout_width="match_parent"
+			        android:layout_height="200dp">
+			
+			    </LinearLayout>
+			
+			    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal" >
 
-</RelativeLayout>
+	    <Button
+	        android:id="@+id/btn_product"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:layout_weight="1"
+	        android:layout_marginLeft="5dp"
+	        android:layout_marginRight="5dp"
+	        android:layout_marginTop="5dp"
+	        android:background="@drawable/xactivtypage3"
+	        android:textColor="#ffffff"
+	        android:text="产品购买"/>
+	    <Button
+	        android:id="@+id/btn_story"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:layout_marginLeft="5dp"
+	        android:layout_marginRight="5dp"
+	        android:layout_marginTop="5dp"
+	        android:layout_weight="1"
+	        android:background="@drawable/xactivtypage4"
+	        android:textColor="#ffffff"
+	        android:text="达人故事"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal" >
+
+	    <Button
+	        android:id="@+id/btn_activity"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:layout_weight="1"
+	        android:layout_marginLeft="5dp"
+	        android:layout_marginRight="5dp"
+	        android:layout_marginTop="5dp"
+	        android:background="@drawable/xactivtypage"
+	        android:textColor="#ffffff"
+	        android:text="X的活动"/>
+	    <Button
+	        android:id="@+id/btn_introduce"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:background="@drawable/xactivtypage2"
+	        android:textColor="#ffffff"
+	        android:layout_marginLeft="5dp"
+	        android:layout_marginRight="5dp"
+	        android:layout_marginTop="5dp"
+	        android:layout_weight="1"
+	        android:text="X的介绍"/>
+    </LinearLayout>
+			   </LinearLayout>
+            </FrameLayout>
+         </LinearLayout>
+    </FrameLayout>
+
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:background="@drawable/allbackground"/>
+
+</android.support.v4.widget.DrawerLayout>
+
